--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
                     </fieldset>
                 </form>
 
+                <video width="300px" controls>
+                    <source src="videos/Wildlife.mp4" type="video/mp4">
+                </video>
+
                 <span class="espaco col-12"></span>
 
                 <table class="table table-striped table-bordered col-12">
